syntax = "proto3";

import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_outer_classname = "HelloWorldProto";

package me.zhixingye.im.grpc;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (stream HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
    google.protobuf.Any data = 3;

}

// The response message containing the greetings
message HelloReply {
    string message = 1;
    google.protobuf.Any data = 3;
}